--- a/webapp/assets/css/info.css
+++ b/webapp/assets/css/info.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 .dropdownmenu ul {
-    background: gray;
+    background: rgb(202, 202, 202);
     list-style: none;
     width: 100%;
 }
@@ -14,7 +14,7 @@
     width: auto;
 }
 .dropdownmenu a {
-    background: #d0d0d0;
+    background: #fcfbfb;
     color: #000000;
     display: block;
     font-family: Arial, Helvetica, sans-serif;
@@ -28,8 +28,8 @@
     transition: all .25s ease;
 }
 .dropdownmenu li:hover a {
-    background: #ffffff;
-    color: #000000;
+    background: #001660;
+    color: #ffffff;
 }
 #submenu {
     left: 0;
@@ -54,7 +54,8 @@ li:hover ul#submenu {
     color: #ffffff;
 }
 #submenu a {
-    background-color: #ffffff;
+    background-color: #dfdbdb;
+    color: #000000;
 }
 
 .card-body {
@@ -100,12 +101,10 @@ li:hover ul#submenu {
     }
 }
 
-
 .regresar:hover {
     color: rgb(245, 230, 212);
     text-decoration: none;
 }
-
 
 .img-fluid {
     max-height: 100%;
@@ -132,4 +131,39 @@ li:hover ul#submenu {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     position: relative;
     overflow: hidden;
+}
+
+.inscriptionbtn:after {
+    content: "";
+    background-color: #001660;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+
+.inscriptionbtn:hover:after {
+    animation: ripple_401 1s ease-out;
+}
+
+@keyframes ripple_401 {
+    0% {
+        width: 5px;
+        height: 5px;
+        opacity: 1;
+    }
+
+    100% {
+        width: 200px;
+        height: 200px;
+        opacity: 0;
+    }
+}
+
+h6{
+    padding: 19px;
 }
